<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.example.rasel.calculator.MainActivity">

    <TableRow>

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:background="@color/textboxcolor"
            android:gravity="bottom|end"
            android:textSize="30sp" />
    </TableRow>

    <TableRow
        android:layout_marginTop="10dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/button1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="valueCliked"
            android:text="@string/buttonOne"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="valueCliked"
            android:text="@string/buttontwo"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="valueCliked"
            android:text="@string/buttonthree"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonminus"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="calculate"
            android:text="@string/buttonminus"
            android:textSize="25sp" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/button4"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="valueCliked"
            android:text="@string/buttonfour"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="valueCliked"
            android:text="@string/buttonfive"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button6"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="valueCliked"
            android:text="@string/buttonsix"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonplus"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="calculate"
            android:text="@string/buttonplus"
            android:textSize="25sp" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/button7"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="valueCliked"
            android:text="@string/buttonseven"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="valueCliked"
            android:text="@string/buttoneight"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button9"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="valueCliked"
            android:text="@string/buttonnine"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonmul"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="calculate"
            android:text="@string/buttonmultiplication"
            android:textSize="25sp" />
    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/button0"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="valueCliked"
            android:text="@string/buttonzero"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttonpoint"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="valueCliked"
            android:text="@string/buttonpoing"
            android:textSize="25sp" />

        <Button
            android:id="@+id/button1eual"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="calculate"
            android:text="@string/buttonequal"
            android:textSize="25sp" />

        <Button
            android:id="@+id/buttondiv"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="calculate"
            android:text="@string/buttondivision"
            android:textSize="25sp" />

    </TableRow>

    <TableRow android:layout_weight="1">

        <Button
            android:id="@+id/btnMemo"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/background_light"
            android:onClick="showHistory"
            android:text="@string/history" />
    </TableRow>

</TableLayout>
